Revision history for {{$dist->name}}

{{$NEXT}}

0.28      2014-12-08 12:43:53 -0500
  - make confusing documentation less confusing.

0.27      2014-08-20 03:54:14 -0400
  - disable t/mojo_ssl.t since it is unreliable and we test the 
    same features with t/ae_ssl.t now.

0.26      2014-08-19 10:59:26 -0400
  - if Crypt::Random::Source is already installed, require at least
    version 0.08 to avoid Class::MOP deprecation warnings

0.25      2014-08-11 14:35:11 -0400
  - fix broken link in documentation

0.24      2014-08-11 07:29:49 -0400
  - documentation
    (add a FAQ about AnyEvent that I keep getting)
  - testing ssl
    (without Mojo)

0.23      2014-08-04 12:41:07 -0400
  - documentation improvements
  - use AE:: instead of AnyEvent-> for performance

0.22      2014-06-19 15:33:56 -0400
  - Mojo 5.x compat (testing only)

0.21      2014-04-08 12:52:51 -0400
  - Perl 5.8 support
    Only useful if you force install Protocol::WebSocket, since it
    has a failing test on 5.8

0.20      2013-11-05 10:19:20 -0500
  - prevent multiple finish callbacks in unusual cases (Toshio Ito gh#15)

0.19      2013-11-04 07:26:19 -0500
  [AE::WS::Connection enhacements (thanks Toshio Ito)]
  - Automatically respond to a close frame with a close frame (RFC6455 5.5.1)
  - Make sure "finish" callbacks are called only once.
  - Automatically shutdown the socket on "finish" event. This makes sure EOF signal is sent to the peer.
  - Refuse to send/receive frames after it sends/receives a close frame. (RFC6455 1.4, 5.5.1)
  - Abort the connection when it receives a too huge message. The size limit is imposed by Protocol::WebSocket::Frame (RFC6455 10.4)
  - Automatically respond to a ping frame with a pong frame of the same payload (RFC6455 5.5.2, 5.5.3)
  - Add "masked" attribute. If set, outgoing frames are masked.
  - Client's Connection now sets masked => true (RFC6455 5.3, 6.1).
  - documentation

0.18      2013-10-21 14:55:47 -0400
  - documentation
