@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - document when deprecated methods will be removed.
 
 0.28      2014-12-08 12:43:53 -0500
   - make confusing documentation less confusing.
